Update CSS HTML

--- a/index.html
+++ b/index.html
@@ -16,34 +16,35 @@
 <body>
   <main>
     <div class="card">
-      <aside class="card__aside">
+      <div class="card__aside">
 
         <picture>
           <source srcset="./images/image-product-mobile.jpg"
                   media="(max-width: 600px)">
-          <img src="./images/image-product-desktop.jpg" alt="product-image" class="card__image">
+          <img src="./images/image-product-desktop.jpg"
+               alt="A bottle of Gabrielle Essense perfume laying flat on a table"
+               class="card__image">
         </picture>
 
-      </aside>
+      </div>
       <div class="card__content">
         <div class="card__header">
-          <h4 class="card__category">PERFUME</h4>
+          <p class="card__category">Perfume</p>
           <h2 class="card__title">Gabrielle Essence Eau De Parfum</h2>
-          <p class="card__description">A floral, solar and voluptuous interpretation composed by Olivier Polge,
+          <p class="card__description">
+            A floral, solar and voluptuous interpretation composed by Olivier Polge,
             Perfumer-Creator for the House of CHANEL.
           </p>
         </div>
         <div class="card__price">
-          <h2 class="card__price--current">$149.99</h2>
+          <p class="card__price--current">$149.99</p>
           <span class="card__price--original">$169.99</span>
         </div>
         <div class="card__footer">
-          <a href="#" class="button">
-            <span class="button__prepend">
-              <img src="./images/icon-cart.svg" alt="">
-            </span>
-            <span>Add to Cart</span>
-          </a>
+          <button href="#" class="button">
+            <img src="./images/icon-cart.svg" alt="" class="button__prepend">
+            Add to Cart
+          </button>
         </div>
 
       </div>
